# cpp-polymorphism-sfml-renderer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  main.cpp
